app/assets/stylesheets/application.scss
/* ... */
section.main .how-to-block .how-to-button-con .button-how-to:hover {
  background: $red;
}
section.main .how-to-block .how-to-button-con .inactive {
  background: rgba(255,255,255, 0.5);
}
section.main .how-to-block .how-to-button-con .inactive:hover {
  background: rgba(255,255,255, 0.5);
}
section.main .how-to-block .how-to-button-con .button-how-to svg {
  height: 20px;
  width: 12px;
}
section.main .how-to-block .how-to-button-con .button-back {
  rotate: 180deg;
}
section.main .how-to-block .images-block {
  align-items: center;
  display: flex;
  justify-content: center;
}
section.main .how-to-block .images-block figure {
  width: per(150,240);
}


// Home
section.home {
  align-content: flex-start;
  display: flex;
  flex-direction: column;
  gap: 40px 0;
  justify-content: flex-start;
}
section.home .button-read-more-home {
  width: 100%;
}
section.home h1 {
  margin: 0;
}
// Home Suggestions
section.home-suggestions {

}
section.home-suggestions .home-suggestions-con {
  display: grid;
  grid-template-columns: 1fr;
  gap: 30px;
}
// Home News
section.home-news {
  align-content: flex-start;
  //display: flex;
  //flex-direction: column;
  justify-content: flex-start;
}
section.home-news .home-news-con {
  display: grid;
  grid-template-columns: 1fr;
  gap: 30px;
}


// News Block
a.news-block {
  align-content: flex-start;
  display: grid;
  gap: 16px 0;
  @include transition(all);
}
a.news-block .date {
  color: $black-light;
  font-family: $general;
  font-size: em(14,16);
  font-weight: $medium;
  line-height: em(14,14);
}
a.news-block h2 {
  color: $black;
  font-family: $headline;
  font-size: em(22,16);
  font-weight: $extrabold;
  line-height: em(32,22);
  @include transition(all);
}
a.news-block .button-read-more-news {
  align-items: center;
  background: $blue-light;
  display: flex;
  height: 50px;
  justify-content: center;
  stroke: $black;
  stroke-width: 2;
  width: 50px;
  @include rounded(25px);
  @include transition(all);
}
a.news-block .button-read-more-news svg {
  height: 20px;
  width: 22px;
}



// Aktuality
section.news .news-con {
  display: grid;
  grid-template-columns: 1fr;
  gap: 40px;
}
a.news-block:hover .news-block-title {
  text-decoration: underline;
}
a.news-block:hover .button-read-more-news {
  background: $pink !important;
}



// Article
section.article {
  margin: 0 auto;
  max-width: 550px;
}
article {

}
article .date {
  color: $black-light;
  display: block;
  font-family: $general;
  font-size: em(14,16);
  font-weight: $medium;
  line-height: em(14,14);
  margin-bottom: 40px;
}
article h1 {
  color: $black;
  font-family: $headline;
  font-size: em(28,16);
  font-weight: $extrabold;
  line-height: em(38,28);
}
article h2 {
  color: $black;
  font-family: $general;
  font-size: em(22,16);
  font-weight: $semibold;
  line-height: em(32,22);
  margin-bottom: 30px;
}
article h3 {
  color: $black;
  font-family: $general;
  font-size: em(20,16);
  font-weight: $semibold;
  line-height: em(28,18);
  margin-bottom: 30px;
}
article p {
  color: $black;
  font-family: $general;
  font-size: em(18,16);
  font-weight: $normal;
  line-height: em(28,18);
  margin-bottom: 30px;
}
article strong {
  font-weight: $semibold;
}
article a,
.prose a {
  color: $black;
  text-decoration: underline;
  text-decoration-color: $blue;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
  @include transition(all);
}
article a:hover,
.prose a:hover {
  color: $red;
  text-decoration-color: $red;
}
article ul {
  color: $black;
  font-family: $general;
  font-size: em(18,16);
  font-weight: $normal;
  line-height: em(28,18);
  margin: 0 0 30px 15px;
}
article ul li {
  padding-left: 30px;
  text-indent: -30px;
  margin-bottom: 15px;
}
article ul li::before {

  color: $blue;
  content: "—";
  font-family: $general;
  font-weight: $medium;
  margin-right: 17px;
}
article img {
  margin-bottom: 30px;
  width: auto;
  height: auto;
}
article figure figcaption {
  color: $black-light;
  font-family: $general;
  font-size: em(14,16);
  font-weight: $normal;
  line-height: em(26,14);
  margin-top: 6px;
}



// Profil
section.profile {

}
section.profile .profile-con {
  display: grid;
  row-gap: 60px;
}
section.profile .profile-con .button {
  width: 100%;
}
section.profile .profile-con .button button {
  color: $white;
}

section.profile .profile-wrapper {
  background: $blue-light;
  display: flex;
  flex-direction: column;
  row-gap: 40px;
  padding: per(20,280);
  @include rounded(15px);
}
section.profile .profile-wrapper .profile-info-panel {
  //border-bottom: 1px solid $black-ten;
  align-items: center;
  display: flex;
  flex-direction: column;
  row-gap: 20px;
  justify-content: center;
  //padding-bottom: 40px;
}
section.profile .profile-wrapper .profile-info-panel form.button_to {
  width: 100%;
}

section.profile .profile-wrapper .profile-info-panel figure {
  height: 180px;
  //margin-bottom: 10px;
  overflow: hidden;
  position: relative;
  width: 180px;
  @include rounded(100px);
}
section.profile .profile-wrapper .profile-info-panel figure picture {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}section.profile .profile-wrapper .profile-info-panel figure picture img {
   object-fit: cover;
 }
section.profile .profile-wrapper .profile-name {
  color: $black;
  font-family: $general;
  font-size: em(22,16);
  font-weight: $semibold;
  line-height: em(30,22);
}
section.profile .profile-wrapper .profile-since {
  color: $black-light;
  font-family: $general;
  font-size: em(16,16);
  font-weight: $medium;
  line-height: em(24,16);
  text-align: center;
  max-width: 200px;
}
section.profile .podnet-block-con {
  display: grid;
  gap: 30px 0;
  grid-template-columns: 1fr;
}



// Results
section.profile .profile-results-con {
  display: flex;
  flex-direction: column;
  row-gap: 30px;
}
/* ... */

